--- a/modules/Java8Supplements/pom.xml
+++ b/modules/Java8Supplements/pom.xml
@@ -32,14 +32,14 @@
     <parent>
         <groupId>it.tidalwave.thesefoolishthings</groupId>
         <artifactId>modules</artifactId>
-        <version>1.37</version>
+        <version>1.38-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
     <groupId>it.tidalwave.thesefoolishthings</groupId>
     <artifactId>it-tidalwave-util-java8supplement</artifactId>
     <packaging>jar</packaging>
-    <version>1.12</version>
+    <version>1.13-SNAPSHOT</version>
     <name>TheseFoolishThings - Java 8 Supplements</name>
 
     <properties>
