--- a/modules/Utilities/pom.xml
+++ b/modules/Utilities/pom.xml
@@ -6,14 +6,14 @@
     <parent>
         <groupId>it.tidalwave.thesefoolishthings</groupId>
         <artifactId>modules</artifactId>
-        <version>1.37</version>
+        <version>1.38-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
     <groupId>it.tidalwave.thesefoolishthings</groupId>
     <artifactId>it-tidalwave-util</artifactId>
     <packaging>nbm</packaging>
-    <version>1.12.28</version>
+    <version>1.12.29-SNAPSHOT</version>
     <name>TheseFoolishThings - Utilities</name>
 
     <properties>
