--- a/modules/Java8Supplements/pom.xml
+++ b/modules/Java8Supplements/pom.xml
@@ -64,6 +64,10 @@
         </dependency>
 
         <dependency>
+            <groupId>it.tidalwave.thesefoolishthings</groupId>
+            <artifactId>it-tidalwave-role</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.google.code.findbugs</groupId>
             <artifactId>jsr305</artifactId>
         </dependency>
