--- a/modules/Java8Supplements/pom.xml
+++ b/modules/Java8Supplements/pom.xml
@@ -3,9 +3,10 @@
   #%L
   *********************************************************************************************************************
 
-  NorthernWind
+  These Foolish Things - Miscellaneous utilities
+  http://thesefoolishthings.java.net - hg clone https://bitbucket.org/tidalwave/thesefoolishthings-src
   %%
-  Copyright (C) 2013 - 2014 Tidalwave s.a.s. (http://tidalwave.it)
+  Copyright (C) 2009 - 2015 Tidalwave s.a.s. (http://tidalwave.it)
   %%
   *********************************************************************************************************************
 
@@ -22,8 +23,8 @@
 
   $Id$
 
-*********************************************************************************************************************
-#L%
+  *********************************************************************************************************************
+  #L%
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
