--- a/modules/MessageBus/pom.xml
+++ b/modules/MessageBus/pom.xml
@@ -6,13 +6,13 @@
     <parent>
         <groupId>it.tidalwave.thesefoolishthings</groupId>
         <artifactId>modules</artifactId>
-        <version>1.38-SNAPSHOT</version>
+        <version>1.38</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
     <groupId>it.tidalwave.thesefoolishthings</groupId>
     <artifactId>it-tidalwave-messagebus</artifactId>
-    <version>1.0.22-SNAPSHOT</version>
+    <version>1.0.22</version>
     <packaging>nbm</packaging>
     <name>TheseFoolishThings - MessageBus</name>
     <description>TheseFoolishThings - MessageBus</description>
