--- a/modules/Vaadin/pom.xml
+++ b/modules/Vaadin/pom.xml
@@ -6,13 +6,13 @@
     <parent>
         <groupId>it.tidalwave.thesefoolishthings</groupId>
         <artifactId>modules</artifactId>
-        <version>1.38-SNAPSHOT</version>
+        <version>1.38</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
     <groupId>it.tidalwave.thesefoolishthings</groupId>
     <artifactId>it-tidalwave-ui-vaadin</artifactId>
-    <version>1.0.20-SNAPSHOT</version>
+    <version>1.0.20</version>
     <packaging>jar</packaging>
     <name>TheseFoolishThings - Vaadin Enhancements</name>
     <description>TheseFoolishThings - Vaadin Enhancements</description>
