--- a/modules/BeansBinding/pom.xml
+++ b/modules/BeansBinding/pom.xml
@@ -6,13 +6,13 @@
     <parent>
         <groupId>it.tidalwave.thesefoolishthings</groupId>
         <artifactId>modules</artifactId>
-        <version>1.38</version>
+        <version>1.39-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
     <groupId>it.tidalwave.thesefoolishthings</groupId>
     <artifactId>it-tidalwave-swing-beansbinding</artifactId>
-    <version>1.1.51</version>
+    <version>1.1.52-SNAPSHOT</version>
     <packaging>nbm</packaging>
     <name>TheseFoolishThings - Swing BeansBindings</name>
 
