--- a/modules/Roles/pom.xml
+++ b/modules/Roles/pom.xml
@@ -39,7 +39,9 @@
 
         <dependency>
             <groupId>com.kenai.nbpwr</groupId>
-            <artifactId>org-slf4j-jdk14</artifactId> <!-- FIXME: this should be slf4j alone -->
+            <artifactId>org-slf4j-jdk14</artifactId>
+            <!-- So we get the dependency info in the NBM, but the jar doesn't depend on the wrapper module -->
+            <optional>true</optional> 
         </dependency>
 
         <!-- Needed in compilation, because of the annotation processor -->
