--- a/modules/Vaadin/pom.xml
+++ b/modules/Vaadin/pom.xml
@@ -60,6 +60,10 @@
             <artifactId>refresher</artifactId>
             <version>1.1.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
