--- a/modules/Roles/pom.xml
+++ b/modules/Roles/pom.xml
@@ -6,14 +6,14 @@
     <parent>
         <groupId>it.tidalwave.thesefoolishthings</groupId>
         <artifactId>modules</artifactId>
-        <version>1.39-SNAPSHOT</version>
+        <version>1.39</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
     <groupId>it.tidalwave.thesefoolishthings</groupId>
     <artifactId>it-tidalwave-role</artifactId>
     <packaging>nbm</packaging>
-    <version>1.0.5-SNAPSHOT</version>
+    <version>1.0.5</version>
     <name>TheseFoolishThings - Roles</name>
 
     <properties>
