--- a/modules/examples/pom.xml
+++ b/modules/examples/pom.xml
@@ -6,14 +6,14 @@
     <parent>
         <groupId>it.tidalwave.thesefoolishthings</groupId>
         <artifactId>modules</artifactId>
-        <version>1.39-SNAPSHOT</version>
+        <version>1.39</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
     <groupId>it.tidalwave.thesefoolishthings</groupId>
     <artifactId>thesefoolishthings-examples</artifactId>
     <packaging>pom</packaging>
-    <version>1.0.30-SNAPSHOT</version>
+    <version>1.0.30</version>
     <name>TheseFoolishThings Examples (master)</name>
 
     <dependencies>
