--- a/modules/NetBeansEventBusAdapter/pom.xml
+++ b/modules/NetBeansEventBusAdapter/pom.xml
@@ -5,13 +5,13 @@
     <parent>
         <artifactId>modules</artifactId>
         <groupId>it.tidalwave.thesefoolishthings</groupId>
-        <version>2.0</version>
+        <version>2.1-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
     <groupId>it.tidalwave.thesefoolishthings</groupId>
     <artifactId>it-tidalwave-messagebus-platformx-eventbus</artifactId>
-    <version>2.0</version>
+    <version>2.1-SNAPSHOT</version>
     <packaging>nbm</packaging>
     <name>TheseFoolishThings - MessageBus (NetBeans PlatformX EventBus Adapter)</name>
 
