--- a/modules/examples/FinderExample2/pom.xml
+++ b/modules/examples/FinderExample2/pom.xml
@@ -5,13 +5,13 @@
     <parent>
         <groupId>it.tidalwave.thesefoolishthings</groupId>
         <artifactId>thesefoolishthings-examples</artifactId>
-        <version>2.0</version>
+        <version>2.1-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
     <groupId>it.tidalwave.thesefoolishthings</groupId>
     <artifactId>it-tidalwave-thesefoolishthings-examples-finderexample2</artifactId>
-    <version>2.0</version>
+    <version>2.1-SNAPSHOT</version>
     <name>TheseFoolishThings Examples - Finder Example 2</name>
 
     <dependencies>
