Updated JaCoCo plugin.

--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
         <tft.clirr.skip>true</tft.clirr.skip> <!-- FIXME Clirr makes the build fail -->
         <!-- disables javancss since it's broken with JDK 1.7 -->
         <tft.profile.metrics.defaultGoal>install findbugs:findbugs pmd:cpd pmd:pmd checkstyle:checkstyle clirr:clirr dependency:analyze</tft.profile.metrics.defaultGoal>
+        <tft.jacoco-maven-plugin.version>0.7.5.201505241946</tft.jacoco-maven-plugin.version>
     </properties>
 
     <issueManagement>
