--- a/archetypes/project/src/main/resources/archetype-resources/modules/pom.xml
+++ b/archetypes/project/src/main/resources/archetype-resources/modules/pom.xml
@@ -99,7 +99,7 @@
 
             <dependency>
                 <groupId>com.google.code.findbugs</groupId>
-                <artifactId>jsr305</artifactId>
+                <artifactId>annotations</artifactId>
                 <version>${tft.jsr305.version}</version>
             </dependency>
             <dependency>
@@ -138,7 +138,7 @@
     <dependencies>
         <dependency>
             <groupId>com.google.code.findbugs</groupId>
-            <artifactId>jsr305</artifactId>
+            <artifactId>annotations</artifactId>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
