--- a/modules/examples/FinderExample3/pom.xml
+++ b/modules/examples/FinderExample3/pom.xml
@@ -30,7 +30,7 @@
         </dependency>
         <dependency>
             <groupId>com.google.code.findbugs</groupId>
-            <artifactId>jsr305</artifactId>
+            <artifactId>annotations</artifactId>
             <scope>provided</scope>
         </dependency>
         <dependency>
