--- a/modules/pom.xml
+++ b/modules/pom.xml
@@ -21,22 +21,20 @@
         <cglib.version>2.1.3-201003011305</cglib.version>
         <incava.version>1.1.0</incava.version>
         <javax-annotation.version>1.3.7-201002241900</javax-annotation.version>
-        <javax-inject.version>1.0-201002241208</javax-inject.version>
         <joda-time.version>1.6.2-201110292322</joda-time.version>
-        <jsr305.version>2.0.1</jsr305.version>
-        <logback.version>1.0.7</logback.version>
         <netbeans.version>RELEASE712-1</netbeans.version>
         <org.springframework.version>3.1.0.RELEASE</org.springframework.version>
-        <slf4j.version>1.6.1</slf4j.version>
         <slf4jk.version>${slf4j.version}-201106101300</slf4jk.version>
         <uuid.version>2.1.5-201007271250</uuid.version>
         <vaadin.version>6.6.1</vaadin.version>
-
+        <tft.jsr330.version>1.0-201002241208</tft.jsr330.version>
+        <tft.junit.version>4.12</tft.junit.version>
+        <tft.slf4j.version>1.6.1</tft.slf4j.version>
+        <slf4j.version>${tft.slf4j.version}</slf4j.version>
         <tft.UmlGraphDoc.additionalParam>-views -attributes -operations -types -postfixpackage -nodefontpackagesize 6 -nodefontclasssize 8 -nodefontsize 7 -edgefontsize 7 -nodesep 0.05 -ranksep 0.1 -visibility -inferrel -hide java.*|javax.*</tft.UmlGraphDoc.additionalParam>
 
         <tft.javac.source>1.7</tft.javac.source> <!-- For Android compatibility -->
         <tft.javac.target>1.7</tft.javac.target>
-        <tft.javadoc.doclint>-Xdoclint:none</tft.javadoc.doclint>
     </properties>
 
     <dependencyManagement>
@@ -65,7 +63,7 @@
             <dependency>
                 <groupId>com.kenai.nbpwr</groupId>
                 <artifactId>javax-inject</artifactId>
-                <version>${javax-inject.version}</version>
+                <version>${tft.jsr330.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.kenai.nbpwr</groupId>
@@ -75,7 +73,7 @@
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>jcl-over-slf4j</artifactId>
-                <version>${slf4j.version}</version>
+                <version>${tft.slf4j.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.kenai.nbpwr</groupId>
@@ -90,8 +88,8 @@
 
             <dependency>
                 <groupId>com.google.code.findbugs</groupId>
-                <artifactId>jsr305</artifactId>
-                <version>${jsr305.version}</version>
+                <artifactId>annotations</artifactId>
+                <version>${tft.jsr305.version}</version>
             </dependency>
 
             <dependency>
@@ -137,12 +135,12 @@
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-api</artifactId>
-                <version>${slf4j.version}</version>
+                <version>${tft.slf4j.version}</version>
             </dependency>
             <dependency>
                 <groupId>ch.qos.logback</groupId>
                 <artifactId>logback-classic</artifactId>
-                <version>${logback.version}</version>
+                <version>${tft.logback.version}</version>
             </dependency>
 
             <dependency>
