--- a/modules/Beans/pom.xml
+++ b/modules/Beans/pom.xml
@@ -6,13 +6,13 @@
     <parent>
         <groupId>it.tidalwave.thesefoolishthings</groupId>
         <artifactId>modules</artifactId>
-        <version>2.6-SNAPSHOT</version>
+        <version>2.6</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
     <groupId>it.tidalwave.thesefoolishthings</groupId>
     <artifactId>it-tidalwave-beans</artifactId>
-    <version>2.6-SNAPSHOT</version>
+    <version>2.6</version>
     <packaging>nbm</packaging>
     <name>TheseFoolishThings - Beans</name>
 
