--- a/modules/pom.xml
+++ b/modules/pom.xml
@@ -187,6 +187,23 @@
         <module>Utilities</module>
         <module>TestUtilities</module>
         <module>examples</module>
-  </modules>
+    </modules>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <properties>
+                        <property>
+                            <name>listener</name>
+                            <value>${tft.test.listeners}</value>
+                        </property>
+                    </properties>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
