--- a/modules/pom.xml
+++ b/modules/pom.xml
@@ -6,14 +6,14 @@
     <parent>
         <groupId>it.tidalwave.thesefoolishthings</groupId>
         <artifactId>thesefoolishthings</artifactId>
-        <version>3.0-BETA-2-SNAPSHOT</version>
+        <version>3.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
     <groupId>it.tidalwave.thesefoolishthings</groupId>
     <artifactId>modules</artifactId>
     <packaging>pom</packaging>
-    <version>3.0-BETA-2-SNAPSHOT</version>
+    <version>3.0-SNAPSHOT</version>
     <name>TheseFoolishThings (modules)</name>
 
     <properties>
