--- a/modules/TestUtilities/pom.xml
+++ b/modules/TestUtilities/pom.xml
@@ -6,14 +6,14 @@
     <parent>
         <groupId>it.tidalwave.thesefoolishthings</groupId>
         <artifactId>modules</artifactId>
-        <version>3.0-BETA-2-SNAPSHOT</version>
+        <version>3.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
     <groupId>it.tidalwave.thesefoolishthings</groupId>
     <artifactId>it-tidalwave-util-test</artifactId>
     <packaging>jar</packaging>
-    <version>3.0-BETA-2-SNAPSHOT</version>
+    <version>3.0-SNAPSHOT</version>
     <name>TheseFoolishThings - Test Utilities</name>
 
     <properties>
